--- a/app/src/main/res/layout/activity_choosedeliverytype.xml
+++ b/app/src/main/res/layout/activity_choosedeliverytype.xml
@@ -24,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="@string/choose_a_slot" />
+                android:text="@string/choose_delivery_time_slot" />
 
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
@@ -35,11 +35,11 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <RelativeLayout
-            android:visibility="gone"
-            android:background="@color/violet"
             android:id="@+id/deliver_now"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@color/violet"
+            android:visibility="gone">
 
             <android.support.v7.widget.AppCompatTextView
                 style="@style/BlackTextColorStyle"
@@ -62,13 +62,13 @@
         </RelativeLayout>
 
         <android.support.v7.widget.AppCompatTextView
-            android:layout_below="@+id/deliver_now"
             android:id="@+id/txt_available"
-            android:gravity="center"
-
             style="@style/BlackTextColorStyle"
             android:layout_width="match_parent"
+
             android:layout_height="wrap_content"
+            android:layout_below="@+id/deliver_now"
+            android:gravity="center"
             android:padding="@dimen/_10sdp"
             android:text="@string/available_delivery_slots" />
 
