--- a/app/src/main/res/layout/brand_row_selector.xml
+++ b/app/src/main/res/layout/brand_row_selector.xml
@@ -2,23 +2,46 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/cl_main"
+
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-    <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/productNumberTv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        app:layout_constraintEnd_toEndOf="parent"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:checked="true"
-        android:drawableEnd="@mipmap/arrow"
-        android:drawablePadding="@dimen/_8sdp"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="@dimen/_4sdp"
-        android:textColor="@color/colorPrimary"
-        android:textSize="@dimen/_11sdp" />
+        android:elevation="@dimen/_5sdp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:orientation="horizontal">
+        <android.support.v7.widget.AppCompatTextView
+            android:id="@+id/productNumberTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:checked="true"
+            android:text="1"
+            android:layout_gravity="center"
+            android:drawablePadding="@dimen/_8sdp"
+            android:gravity="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:padding="@dimen/_4sdp"
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/_11sdp" />
+
+        <ImageView
+            android:layout_alignParentEnd="true"
+            android:layout_width="wrap_content"
+            android:padding="@dimen/_4sdp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@android:color/transparent"
+            android:rotation="@integer/locale_mirror_flip"
+            android:src="@mipmap/arrow" />
+    </LinearLayout>
 
     <android.support.v7.widget.AppCompatTextView
         app:layout_constraintStart_toStartOf="parent"
