--- a/app/src/main/res/layout/content_profile_activity.xml
+++ b/app/src/main/res/layout/content_profile_activity.xml
@@ -87,12 +87,20 @@
                 android:maxLines="1" />
 
         </android.support.design.widget.TextInputLayout>
-
+        <android.support.v7.widget.AppCompatTextView
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="@string/mobile_number"
+            android:layout_marginLeft="@dimen/_3sdp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_9sdp"
+            android:visibility="visible" />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="start"
-            android:layout_marginTop="@dimen/_10sdp"
             android:gravity="start|center_vertical"
             android:orientation="horizontal">
             <!-- <Spinner
@@ -106,8 +114,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layoutDirection="ltr"
                 android:orientation="horizontal">
-
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/countryCodeEditText"
                     android:layout_width="wrap_content"
@@ -131,7 +139,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:digits="1234567890"
-                        android:hint="@string/mobile_number"
+
                         android:imeOptions="actionNext"
                         android:inputType="phone"
                         android:maxLines="1" />
