--- a/app/src/main/res/layout/content_set_delivery_address_activity.xml
+++ b/app/src/main/res/layout/content_set_delivery_address_activity.xml
@@ -9,22 +9,39 @@
     android:orientation="vertical"
     tools:showIn="@layout/delivery_address_activity">
 
-    <android.support.v7.widget.AppCompatTextView
+    <!--<android.support.v7.widget.AppCompatTextView-->
+        <!--android:id="@+id/searchDeliveryAddress"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginStart="@dimen/_8sdp"-->
+        <!--android:layout_marginEnd="@dimen/_8sdp"-->
+        <!--android:drawableEnd="@mipmap/search"-->
+        <!--android:hint="@string/address_search_hint"-->
+        <!--android:paddingStart="@dimen/_10sdp"-->
+        <!--android:paddingTop="@dimen/_15sdp"-->
+        <!--android:paddingEnd="@dimen/_10sdp"-->
+        <!--android:paddingBottom="@dimen/_5sdp"-->
+        <!--android:textColor="@color/black"-->
+        <!--android:textColorHint="@color/black"-->
+        <!--android:textSize="@dimen/_12sdp"-->
+        <!--app:backgroundTint="@color/violet_1"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toTopOf="parent" />-->
+
+    <android.support.v7.widget.AppCompatButton
         android:id="@+id/searchDeliveryAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_8sdp"
         android:layout_marginEnd="@dimen/_8sdp"
-        android:drawableEnd="@mipmap/search"
-        android:hint="@string/address_search_hint"
-        android:paddingStart="@dimen/_10sdp"
-        android:paddingTop="@dimen/_15sdp"
-        android:paddingEnd="@dimen/_10sdp"
-        android:paddingBottom="@dimen/_5sdp"
-        android:textColor="@color/black"
+        android:text="@string/add_new_address"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/white"
+        android:fontFamily="@font/roboto_medium_0"
         android:textColorHint="@color/black"
         android:textSize="@dimen/_12sdp"
-        app:backgroundTint="@color/violet_1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -32,11 +49,13 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:visibility="gone"
         android:layout_marginStart="@dimen/_8sdp"
         android:layout_marginEnd="@dimen/_8sdp"
         android:background="@color/violet_1" />
 
     <RelativeLayout
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
@@ -83,6 +102,13 @@
         </LinearLayout>
 
     </RelativeLayout>
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txt_clearall">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/deliveryAddressRecyclerView"
@@ -90,7 +116,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_weight="1" />
-
+    </android.support.v4.widget.SwipeRefreshLayout>
     <android.support.v7.widget.AppCompatButton
         android:id="@+id/deliveryAddressDoneBt"
         style="@style/ButtonTextStyle"
