--- a/app/src/main/res/layout/discounts_row.xml
+++ b/app/src/main/res/layout/discounts_row.xml
@@ -37,13 +37,14 @@
             android:textStyle="bold"/>
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/expireDateTv"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toEndOf="@+id/discountImageIv"
             android:text="wewe"
+            app:layout_constraintEnd_toStartOf="@+id/discountPercentageTv"
             app:layout_constraintTop_toBottomOf="@+id/couponCodeTv"
             android:paddingStart="@dimen/_8sdp"
-            android:paddingEnd="@dimen/_5sdp"
+            android:paddingEnd="@dimen/_15sdp"
             android:textColor="@color/colorRed"
             android:textSize="@dimen/_12sdp"/>
 
