--- a/app/src/main/res/layout/layout_loyalty_points_list.xml
+++ b/app/src/main/res/layout/layout_loyalty_points_list.xml
@@ -39,6 +39,7 @@
 
 
     <ImageView
+        android:visibility="gone"
         android:padding="@dimen/_10sdp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
