--- a/app/src/main/res/layout/layout_my_order_item.xml
+++ b/app/src/main/res/layout/layout_my_order_item.xml
@@ -4,8 +4,8 @@
     android:id="@+id/myOrderItemCardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
     android:layout_margin="@dimen/_5sdp"
+    android:orientation="vertical"
     app:cardElevation="@dimen/_10sdp">
 
     <LinearLayout
@@ -59,73 +59,45 @@
                             android:textSize="@dimen/_14sdp"
                             android:textStyle="bold" />
                     </LinearLayout>
+
                     <LinearLayout
-                        android:layout_alignParentEnd="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/txt_reply">
 
-                        <RelativeLayout
-                            android:visibility="gone"
-                            android:id="@+id/btn_edit"
-                            android:layout_width="@dimen/_25sdp"
-                            android:layout_height="@dimen/_25sdp">
+                        <!--<RelativeLayout-->
+                        <!--android:visibility="visible"-->
+                        <!--android:id="@+id/btn_edit"-->
+                        <!--android:layout_width="@dimen/_25sdp"-->
+                        <!--android:layout_height="@dimen/_25sdp">-->
 
-                            <de.hdodenhof.circleimageview.CircleImageView
-                                android:layout_width="@dimen/_25sdp"
-                                android:layout_height="@dimen/_25sdp"
-                                android:src="#F3F3F3"
-                                android:textColor="@color/colorPrimary"
-                                app:civ_border_color="@color/white"
-                                app:civ_border_width="0.2dp" />
+                        <!--<de.hdodenhof.circleimageview.CircleImageView-->
+                        <!--android:layout_width="@dimen/_25sdp"-->
+                        <!--android:layout_height="@dimen/_25sdp"-->
+                        <!--android:src="#F3F3F3"-->
+                        <!--android:textColor="@color/colorPrimary"-->
+                        <!--app:civ_border_color="@color/white"-->
+                        <!--app:civ_border_width="0.2dp" />-->
 
-                            <de.hdodenhof.circleimageview.CircleImageView
-                                android:layout_width="@dimen/_25sdp"
-                                android:layout_height="@dimen/_25sdp"
-                                android:padding="@dimen/_6sdp"
-                                android:src="@mipmap/edit"
-                                android:text="@string/edit"
-                                android:textColor="@color/colorPrimary"
-                                android:textSize="@dimen/_10sdp" />
+                        <!--<de.hdodenhof.circleimageview.CircleImageView-->
+                        <!--android:layout_width="@dimen/_25sdp"-->
+                        <!--android:layout_height="@dimen/_25sdp"-->
+                        <!--android:padding="@dimen/_6sdp"-->
+                        <!--android:src="@mipmap/edit"-->
+                        <!--android:text="@string/edit"-->
+                        <!--android:textColor="@color/colorPrimary"-->
+                        <!--android:textSize="@dimen/_10sdp" />-->
+                        <!--</RelativeLayout>-->
 
-
-                        </RelativeLayout>
-
-                        <android.support.v7.widget.AppCompatImageView
-                            android:id="@+id/btn_delete"
-                            android:layout_width="@dimen/_25sdp"
-                            android:layout_height="@dimen/_25sdp"
-                            android:layout_marginStart="@dimen/_3sdp"
-                            android:src="@mipmap/delete"
-                            android:text="@string/delete"
-                            android:visibility="gone"
-                            android:textColor="@color/colorPrimary"
-                            android:textSize="@dimen/_10sdp"
-                            app:layout_constraintEnd_toEndOf="parent" />
-                        <android.support.v7.widget.AppCompatImageView
-                            android:id="@+id/btn_reorder"
-                            android:layout_width="@dimen/_21sdp"
-                            android:layout_height="@dimen/_21sdp"
-                            android:layout_marginTop="@dimen/_3sdp"
-                            android:layout_alignParentEnd="true"
-                            android:layout_marginStart="@dimen/_5sdp"
-                            android:background="@drawable/reorder_background_active"
-                            android:fontFamily="@font/roboto_medium_0"
-                            android:text="@string/reorder"
-                            android:src="@mipmap/reorder"
-                            android:textColor="@color/green"
-                            android:textSize="@dimen/_12sdp"
-                            android:visibility="gone" />
                     </LinearLayout>
-
-
                 </RelativeLayout>
 
                 <LinearLayout
-                    android:layout_marginTop="@dimen/_4sdp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_4sdp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -139,26 +111,26 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:layout_weight="1"
                         android:id="@+id/order_item_txt_order_delivery_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_3sdp"
+                        android:layout_weight="1"
                         android:gravity="start"
                         android:textColor="@color/grey_color_txt"
                         android:textSize="@dimen/_11sdp" />
-                  <!--  <android.support.v7.widget.AppCompatButton
-                        android:id="@+id/btn_delete"
-                        android:layout_width="wrap_content"
-                        android:layout_height="@dimen/_25sdp"
-                        android:layout_alignParentEnd="true"
-                        android:background="@drawable/dark_red_layout_bg"
-                        android:fontFamily="@font/roboto_medium_0"
+                    <!--  <android.support.v7.widget.AppCompatButton
+                          android:id="@+id/btn_delete"
+                          android:layout_width="wrap_content"
+                          android:layout_height="@dimen/_25sdp"
+                          android:layout_alignParentEnd="true"
+                          android:background="@drawable/dark_red_layout_bg"
+                          android:fontFamily="@font/roboto_medium_0"
 
-                        android:text="@string/delete"
-                        android:textColor="@color/white"
-                        android:textSize="@dimen/_12sdp"
-                        android:visibility="visible" />-->
+                          android:text="@string/delete"
+                          android:textColor="@color/white"
+                          android:textSize="@dimen/_12sdp"
+                          android:visibility="visible" />-->
                 </LinearLayout>
 
                 <LinearLayout
@@ -319,6 +291,7 @@
                         android:textSize="@dimen/_11sdp" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -344,6 +317,7 @@
                         android:textSize="@dimen/_11sdp" />
 
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -370,24 +344,100 @@
 
                 </LinearLayout>
             </LinearLayout>
+
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/order_item_btn_track_order"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:background="@drawable/dark_red_layout_bg"
+                android:gravity="center"
+                android:padding="@dimen/_12sdp"
+                android:text="@string/track_order"
+                android:textColor="@color/light_yellow_bg"
+                android:textSize="@dimen/_12sdp"
+                android:visibility="gone" />
+
         </LinearLayout>
 
-        <android.support.v7.widget.AppCompatButton
-            android:id="@+id/order_item_btn_track_order"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/ll_edit"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
-            android:layout_marginBottom="@dimen/_8sdp"
-            android:background="@drawable/dark_red_layout_bg"
-            android:gravity="center"
-            android:padding="@dimen/_12sdp"
-            android:text="@string/track_order"
-            android:textColor="@color/light_yellow_bg"
-            android:textSize="@dimen/_12sdp"
-            android:visibility="gone" />
+            android:orientation="vertical"
+            android:visibility="gone">
 
+            <View
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/orange_1" />
+
+            <android.support.v7.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_35sdp"
+
+                android:orientation="horizontal">
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/btn_edit"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/colorPrimary"
+                    android:fontFamily="@font/roboto_medium_0"
+                    android:gravity="center"
+                    android:text="@string/edit"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12sdp"
+
+                    android:visibility="gone"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+                <View
+                    android:layout_width="0.5dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/white" />
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/btn_delete"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/colorPrimary"
+                    android:fontFamily="@font/roboto_medium_0"
+                    android:gravity="center"
+                    android:src="@mipmap/delete"
+                    android:text="@string/delete"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12sdp"
+                    android:visibility="gone"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+                <View
+                    android:layout_width="0.5dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/white" />
+
+                <android.support.v7.widget.AppCompatTextView
+                    android:id="@+id/btn_reorder"
+
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
+                    android:layout_weight="1"
+                    android:background="@color/colorPrimary"
+                    android:fontFamily="@font/roboto_medium_0"
+                    android:gravity="center"
+                    android:src="@mipmap/reorder"
+                    android:text="@string/reorder"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_12sdp"
+                    android:visibility="gone" />
+            </android.support.v7.widget.LinearLayoutCompat>
+        </LinearLayout>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
