--- a/app/src/main/res/layout/product_list_all_child.xml
+++ b/app/src/main/res/layout/product_list_all_child.xml
@@ -1,8 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/productListRootLL"
     android:layout_width="@dimen/_120sdp"
-    android:layout_height="wrap_content"
-    android:id="@+id/productListRootLL">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
         android:id="@+id/card_view"
@@ -13,54 +13,63 @@
         card_view:cardPreventCornerOverlap="false"
         card_view:cardUseCompatPadding="true">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/imv_product"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_120sdp"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/cartt"
-                android:scaleType="centerCrop"/>
-            <TextView
-                android:id="@+id/outOfStockTv"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_120sdp"
-                android:layout_gravity="center"
-                android:fontFamily="@font/roboto_bold_1"
-                android:gravity="center"
-                android:background="#99FFFFFF"
-                android:text="@string/out_of_stock"
-                android:textColor="@android:color/holo_red_light"
-                android:textSize="@dimen/_10sdp"
-                android:layout_centerHorizontal="true"/>
-
-
-            <TextView
-                android:id="@+id/tv_quantity"
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:layout_alignBottom="@+id/imv_product"
-                android:layout_alignBaseline="@+id/imv_product"
-                android:padding="@dimen/_4sdp"
-                android:textColor="@color/white"
-                android:textSize="@dimen/_8sdp" />
+                android:layout_height="@dimen/_130sdp"
+                android:layout_weight="1">
 
+                <ImageView
+                    android:id="@+id/imv_product"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/cartt" />
+
+                <TextView
+                    android:id="@+id/outOfStockTv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center"
+                    android:background="#99FFFFFF"
+                    android:fontFamily="@font/roboto_bold_1"
+                    android:gravity="center"
+                    android:text="@string/out_of_stock"
+                    android:textColor="@android:color/holo_red_light"
+                    android:textSize="@dimen/_10sdp" />
+
+
+                <TextView
+                    android:id="@+id/tv_quantity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/imv_product"
+                    android:layout_alignBottom="@+id/imv_product"
+                    android:background="@color/colorPrimary"
+                    android:padding="@dimen/_4sdp"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/_8sdp" />
+            </RelativeLayout>
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/tv_product_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_quantity"
                 android:layout_marginEnd="@dimen/_5sdp"
                 android:maxLines="1"
-                android:paddingEnd="@dimen/_6sdp"
                 android:paddingStart="@dimen/_8sdp"
                 android:paddingTop="@dimen/_4sdp"
+                android:paddingEnd="@dimen/_6sdp"
                 android:text="@string/kraft_singles"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_11sdp" />
@@ -70,41 +79,41 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tv_product_title"
-                android:paddingEnd="@dimen/_6sdp"
                 android:paddingStart="@dimen/_8sdp"
-                android:textStyle="bold"
+                android:paddingEnd="@dimen/_6sdp"
+                android:text="10 OMR"
                 android:textColor="@color/colorPrimary"
                 android:textSize="@dimen/_11sdp"
-                android:text="10 OMR"/>
+                android:textStyle="bold" />
 
             <android.support.constraint.ConstraintLayout
+                android:id="@+id/original_price_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingEnd="@dimen/_6sdp"
-                android:paddingStart="@dimen/_8sdp"
                 android:layout_below="@+id/tv_product_amount"
-                android:id="@+id/original_price_layout">
+                android:paddingStart="@dimen/_8sdp"
+                android:paddingEnd="@dimen/_6sdp">
 
-            <TextView
-                android:id="@+id/tv_original_amount"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/discount_off"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_10sdp"
-                android:paddingStart="@dimen/_5sdp"
-                android:paddingEnd="@dimen/_5sdp"
-                android:visibility="visible" />
+                <TextView
+                    android:id="@+id/tv_original_amount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/_5sdp"
+                    android:paddingEnd="@dimen/_5sdp"
+                    android:text="@string/discount_off"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_10sdp"
+                    android:visibility="visible" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_centerInParent="true"
                     android:background="@color/colorRed"
-                    card_view:layout_constraintTop_toTopOf="parent"
                     card_view:layout_constraintBottom_toBottomOf="parent"
+                    card_view:layout_constraintEnd_toEndOf="parent"
                     card_view:layout_constraintStart_toStartOf="parent"
-                    card_view:layout_constraintEnd_toEndOf="parent" />
+                    card_view:layout_constraintTop_toTopOf="parent" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -113,23 +122,23 @@
                 android:id="@+id/actionLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
                 android:layout_below="@id/tv_product_title"
+                android:layout_alignParentEnd="true"
                 android:gravity="center_vertical">
 
                 <android.support.v7.widget.AppCompatImageButton
-                    android:visibility="gone"
                     android:id="@+id/notifyMeBt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
-                    android:paddingBottom="@dimen/_6sdp"
-                    android:paddingEnd="@dimen/_6sdp"
+                    android:gravity="center_vertical"
                     android:paddingStart="@dimen/_6sdp"
+                    android:paddingEnd="@dimen/_6sdp"
+                    android:paddingBottom="@dimen/_6sdp"
                     android:scaleType="centerCrop"
                     android:src="@mipmap/notification"
                     android:tint="@color/buttonUnselectedColor"
-                    android:gravity="center_vertical"/>
+                    android:visibility="gone" />
 
                 <android.support.v7.widget.AppCompatImageButton
 
@@ -137,55 +146,55 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
-                    android:paddingBottom="@dimen/_6sdp"
-                    android:paddingEnd="@dimen/_6sdp"
                     android:paddingStart="@dimen/_6sdp"
+                    android:paddingEnd="@dimen/_6sdp"
+                    android:paddingBottom="@dimen/_6sdp"
                     android:scaleType="centerCrop"
                     android:src="@mipmap/addcart" />
 
                 <android.support.v7.widget.AppCompatImageView
-                    android:visibility="gone"
                     android:id="@+id/addToWishList"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
-                    android:paddingBottom="@dimen/_3sdp"
+                    android:paddingStart="@dimen/_3sdp"
                     android:paddingTop="@dimen/_5sdp"
                     android:paddingEnd="@dimen/_8sdp"
-                    android:paddingStart="@dimen/_3sdp"
+                    android:paddingBottom="@dimen/_3sdp"
                     android:scaleType="centerCrop"
                     android:src="@mipmap/wishlistgrey"
-                    android:tint="@color/buttonOrangeColor" />
+                    android:tint="@color/buttonOrangeColor"
+                    android:visibility="gone" />
             </LinearLayout>
 
+</RelativeLayout>
+            <!-- <LinearLayout
+                 android:id="@+id/outOfStockLL"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:orientation="vertical"
+                 android:layout_below="@+id/actionLayout">
 
-           <!-- <LinearLayout
-                android:id="@+id/outOfStockLL"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_below="@+id/actionLayout">
 
 
+             <View
+                 android:id="@+id/dividerView"
+                 android:layout_width="match_parent"
+                 android:layout_height="1dp"
+                 android:background="@color/violet" />
 
-            <View
-                android:id="@+id/dividerView"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/violet" />
+             <android.support.v7.widget.AppCompatButton
+                 android:id="@+id/moveToCartBt"
+                 android:layout_width="match_parent"
+                 android:layout_height="@dimen/_30sdp"
+                 android:background="@android:color/transparent"
+                 android:gravity="center"
+                 android:text="@string/notify_me"
+                 android:textAllCaps="false"
+                 android:textColor="@color/black"
+                 android:textSize="@dimen/_10sdp" />
 
-            <android.support.v7.widget.AppCompatButton
-                android:id="@+id/moveToCartBt"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_30sdp"
-                android:background="@android:color/transparent"
-                android:gravity="center"
-                android:text="@string/notify_me"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_10sdp" />
-
-            </LinearLayout>-->
-        </RelativeLayout>
+             </LinearLayout>-->
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
